--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "ScheduleModule\\": "schedule-module/app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
